// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module renders with expected standard props 1`] = `
<div
  className="repository--module-icon is-not-open is-not-selected is-not-new"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="is-not-multi-select-mode"
    onClick={[Function]}
    type="checkbox"
  />
  <button
    onClick={[Function]}
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mockDraftId"
        width="100%"
      />
    </div>
    <div
      className="repository--module-icon--menu-control-button menu-control-button"
    >
      <svg
        height="32px"
        viewBox="0 0 32 32"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </div>
    <div
      className="repository--module-icon--title"
    >
      Mock Module Title
    </div>
  </button>
</div>
`;

exports[`Module renders with expected standard props but hasMenu=false 1`] = `
<div
  className="repository--module-icon is-not-open is-not-selected is-not-new"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="is-not-multi-select-mode"
    onClick={[Function]}
    type="checkbox"
  />
  <a
    href="/library/mockDraftId"
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mockDraftId"
        width="100%"
      />
    </div>
    <div
      className="repository--module-icon--title"
    >
      Mock Module Title
    </div>
  </a>
</div>
`;

exports[`Module renders with expected standard props but isMultiSelectMode=true 1`] = `
<div
  className="repository--module-icon is-not-open is-not-selected is-not-new"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="is-multi-select-mode"
    onClick={[Function]}
    type="checkbox"
  />
  <button
    onClick={[Function]}
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mockDraftId"
        width="100%"
      />
    </div>
    <div
      className="repository--module-icon--title"
    >
      Mock Module Title
    </div>
  </button>
</div>
`;

exports[`Module renders with expected standard props but isNew=true 1`] = `
<div
  className="repository--module-icon is-not-open is-not-selected is-new"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={false}
    className="is-not-multi-select-mode"
    onClick={[Function]}
    type="checkbox"
  />
  <button
    onClick={[Function]}
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mockDraftId"
        width="100%"
      />
    </div>
    <div
      className="repository--module-icon--menu-control-button"
    >
      <svg
        height="32px"
        viewBox="0 0 32 32"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </div>
    <div
      className="repository--module-icon--title"
    >
      Mock Module Title
    </div>
  </button>
</div>
`;

exports[`Module renders with expected standard props but isSelected=true 1`] = `
<div
  className="repository--module-icon is-not-open is-selected is-not-new"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
>
  <input
    checked={true}
    className="is-not-multi-select-mode"
    onClick={[Function]}
    type="checkbox"
  />
  <button
    onClick={[Function]}
  >
    <div
      className="repository--module-icon--image"
    >
      <img
        height="100%"
        src="/library/module-icon/mockDraftId"
        width="100%"
      />
    </div>
    <div
      className="repository--module-icon--menu-control-button"
    >
      <svg
        height="32px"
        viewBox="0 0 32 32"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"
        />
      </svg>
    </div>
    <div
      className="repository--module-icon--title"
    >
      Mock Module Title
    </div>
  </button>
</div>
`;
